Don't suspend before there is metadata.

This functionality was inadvertantly removed. Also in this CL, we
resume in OnShown() is we do not yet have matadata, which could
happen if we were forcefully suspended (tab closed) at that stage.

BUG=596239

Review URL: https://codereview.chromium.org/1823643003

Cr-Commit-Position: refs/heads/master@{#382391}

Former-commit-id: 520b46bd833ba35ece1ce1baf29f7932821dd603